minor fixes and forcing scrollbar to prevent content jumps on large pages

--- a/game/css/main.css
+++ b/game/css/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     font-size: 1em;
     line-height: 1.4;
